--- a/MakeSolution.Relatorica.Service/Web.config
+++ b/MakeSolution.Relatorica.Service/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="RelatoricaEntities" connectionString="metadata=res://*/RelatoricaModels.csdl|res://*/RelatoricaModels.ssdl|res://*/RelatoricaModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Relatorica;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
