--- a/MakeSolution.Relatorica.Helpers/packages.config
+++ b/MakeSolution.Relatorica.Helpers/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net47" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net47" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net47" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net47" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net47" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net47" />
 </packages>
