--- a/MakeSolution.Relatorica.Logic/MakeSolution.Relatorica.Logic.csproj
+++ b/MakeSolution.Relatorica.Logic/MakeSolution.Relatorica.Logic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3727C809-146C-48D9-9F8F-0A1262471357}</ProjectGuid>
+    <ProjectGuid>{480CC7F6-3FFA-4757-88DC-A40500F6B978}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MakeSolution.Relatorica.Entities</RootNamespace>
-    <AssemblyName>MakeSolution.Relatorica.Entities</AssemblyName>
+    <RootNamespace>MakeSolution.Relatorica.Logic</RootNamespace>
+    <AssemblyName>MakeSolution.Relatorica.Logic</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,21 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AvanceEntity.cs" />
-    <Compile Include="CompraEntity.cs" />
-    <Compile Include="DepartamentoEntity.cs" />
-    <Compile Include="DistritoEntity.cs" />
-    <Compile Include="HijoEntity.cs" />
-    <Compile Include="HistoriaEntity.cs" />
-    <Compile Include="LoginEntity.cs" />
-    <Compile Include="PadreEntity.cs" />
-    <Compile Include="ParrafoEntity.cs" />
-    <Compile Include="PreguntaEntity.cs" />
-    <Compile Include="ProvinciaEntity.cs" />
-    <Compile Include="ResultRequestEntity.cs" />
+    <Compile Include="CipherLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SonidoEntity.cs" />
-    <Compile Include="UsuarioEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
