--- a/MakeSolution.Relatorica.Service/MakeSolution.Relatorica.Service.csproj
+++ b/MakeSolution.Relatorica.Service/MakeSolution.Relatorica.Service.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\HistoryApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SoundApiController.cs" />
     <Compile Include="Controllers\UserApiController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
