--- a/MakeSolution.Relatorica.Service/MakeSolution.Relatorica.Service.csproj
+++ b/MakeSolution.Relatorica.Service/MakeSolution.Relatorica.Service.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SoundApiController.cs" />
     <Compile Include="Controllers\TokenGenerator.cs" />
+    <Compile Include="Controllers\TokenValidationHandler.cs" />
     <Compile Include="Controllers\UserApiController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
