--- a/MakeSolution.Relatorica.Service/Web.config
+++ b/MakeSolution.Relatorica.Service/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
     <add name="RelatoricaEntities" connectionString="metadata=res://*/RelatoricaModels.csdl|res://*/RelatoricaModels.ssdl|res://*/RelatoricaModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Relatorica;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -12,10 +16,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="JWT_SECRET_KEY"     value="clave-secreta-api"/>
-    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:57890/"/>
-    <add key="JWT_ISSUER_TOKEN"   value="http://localhost:57890/"/>
-    <add key="JWT_EXPIRE_MINUTES" value="30"/>
+    <add key="JWT_SECRET_KEY" value="clave-secreta-api" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:57890/" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:57890/" />
+    <add key="JWT_EXPIRE_MINUTES" value="30" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
@@ -42,7 +46,7 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
-      </dependentAssembly>      
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
         <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
@@ -75,4 +79,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
