--- a/MakeSolution.Relatorica.Entities/MakeSolution.Relatorica.Entities.csproj
+++ b/MakeSolution.Relatorica.Entities/MakeSolution.Relatorica.Entities.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PadreEntity.cs" />
+    <Compile Include="HijoEntity.cs" />
+    <Compile Include="AvanceEntity.cs" />
     <Compile Include="ResultRequestEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
