--- a/MakeSolution.Relatorica.Entities/MakeSolution.Relatorica.Entities.csproj
+++ b/MakeSolution.Relatorica.Entities/MakeSolution.Relatorica.Entities.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HistoriaEntity.cs" />
+    <Compile Include="LoginEntity.cs" />
     <Compile Include="ResultRequestEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
