--- a/MakeSolution.Relatorica.Service/packages.config
+++ b/MakeSolution.Relatorica.Service/packages.config
@@ -27,5 +27,12 @@
   <package id="popper.js" version="1.14.3" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net47" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
