--- a/MakeSolution.Relatorica.Entities/MakeSolution.Relatorica.Entities.csproj
+++ b/MakeSolution.Relatorica.Entities/MakeSolution.Relatorica.Entities.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompraEntity.cs" />
     <Compile Include="HistoriaEntity.cs" />
     <Compile Include="LoginEntity.cs" />
     <Compile Include="AvanceEntity.cs" />
     <Compile Include="HijoEntity.cs" />
     <Compile Include="PadreEntity.cs" />
+    <Compile Include="ParrafoEntity.cs" />
+    <Compile Include="PreguntaEntity.cs" />
     <Compile Include="ResultRequestEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SonidoEntity.cs" />
