--- a/MakeSolution.Relatorica.Service/MakeSolution.Relatorica.Service.csproj
+++ b/MakeSolution.Relatorica.Service/MakeSolution.Relatorica.Service.csproj
@@ -205,6 +205,9 @@
     <Compile Include="Controllers\HistoryApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginApiController.cs" />
+    <Compile Include="Controllers\ParagraphApiController.cs" />
+    <Compile Include="Controllers\PurchaseApiController.cs" />
+    <Compile Include="Controllers\QuestionApiController.cs" />
     <Compile Include="Controllers\SoundApiController.cs" />
     <Compile Include="Controllers\TokenGenerator.cs" />
     <Compile Include="Controllers\TokenValidationHandler.cs" />
