--- a/MakeSolution.Relatorica.DataAccess/App.Config
+++ b/MakeSolution.Relatorica.DataAccess/App.Config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RelatoricaEntities" connectionString="metadata=res://*/RelatoricaModels.csdl|res://*/RelatoricaModels.ssdl|res://*/RelatoricaModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Relatorica;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="RelatoricaEntities" connectionString="metadata=res://*/RelatoricaModels.csdl|res://*/RelatoricaModels.ssdl|res://*/RelatoricaModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=database-1.clzv1mas3qgm.us-east-2.rds.amazonaws.com;initial catalog=Relatorica;user id=admin;password=Xycybib7;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
